--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -25,7 +25,7 @@ jobs:
         uses: super-linter/super-linter/slim@v8
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          FILTER_REGEX_EXCLUDE: .*gatling/mvnw.*|conformance-tests/.*\.ts
+          FILTER_REGEX_EXCLUDE: .*gatling/mvnw.*|conformance-tests/.*\.ts$|examples/chat/chart/mercure-example-chat/README.md$
           VALIDATE_CHECKOV: false
           VALIDATE_GITLEAKS: false
           VALIDATE_GO: false
