feat(helm): add support for HTTProute

--- a/charts/mercure/Chart.yaml
+++ b/charts/mercure/Chart.yaml
@@ -16,5 +16,5 @@ version: 0.21.2
 appVersion: "v0.21.2"
 maintainers:
   - name: dunglas
-    email: kevin@dunglas.fr
-    url: https://dunglas.fr
+    email: kevin@dunglas.dev
+    url: https://dunglas.dev
