feat: add deployment strategy configuration to Helm chart
Updating the deployment with the default strategy fails with BoltDB transport and persistence because 2 pods cannot run simultaneously.
Setting the strategy to "Recreate" allows the old pod to stop before the new one starts.

--- a/charts/mercure/templates/deployment.yaml
+++ b/charts/mercure/templates/deployment.yaml
@@ -8,6 +8,8 @@ spec:
   {{- if not .Values.autoscaling.enabled }}
   replicas: {{ .Values.replicaCount }}
   {{- end }}
+  strategy:
+      type: {{ .Values.updateStrategy.type }}
   selector:
     matchLabels:
       {{- include "mercure.selectorLabels" . | nindent 6 }}
