--- a/.github/linters/.markdown-lint.yml
+++ b/.github/linters/.markdown-lint.yml
@@ -29,6 +29,7 @@ MD026:
 MD029: false # Ordered list item prefix
 MD033: false # Allow inline HTML
 MD036: false # Emphasis used instead of a heading
+MD060: false # Disable table checks incompatible with Prettier
 
 #################
 # Rules by tags #
