--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -40,3 +40,5 @@ jobs:
           VALIDATE_PYTHON_PYLINT: false
           VALIDATE_PYTHON_RUFF_FORMAT: false
           VALIDATE_TRIVY: false
+          # To re-enable when https://github.com/super-linter/super-linter/issues/7466 will be closed
+          VALIDATE_SPELL_CODESPELL: false
