--- a/charts/mercure/values.yaml
+++ b/charts/mercure/values.yaml
@@ -119,6 +119,9 @@ securityContext: {}
   # runAsNonRoot: true
   # runAsUser: 1000
 
+deployment:
+  annotations: {}
+
 service:
   # -- Kubernetes [service type](https://kubernetes.io/docs/concepts/services-networking/service/#publishing-services-service-types).
   type: ClusterIP
