feat(chart): add annotations for deployment

--- a/charts/mercure/values.yaml
+++ b/charts/mercure/values.yaml
@@ -120,6 +120,7 @@ securityContext: {}
   # runAsUser: 1000
 
 deployment:
+  # -- Annotations to be added to the deployment.
   annotations: {}
 
 service:
